Fix pull to scroll on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,3 @@ body {
 h1 {
   font-family: "Fjalla One", sans-serif;
 }
-
-html {
-  overflow: hidden;
-}
